<resources>

    <!--AlbumNav-->
    <string name="app_name">Lake Balaton Guide</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Balaton Region Hungary</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_mustvisit">Must Visit</string>
    <string name="nav_entertainment">Entertainment</string>
    <string name="nav_sports">Sports</string>
    <string name="nav_hotels">Hotels</string>
    <string name="nav_restaurants">Restaurants</string>
    <string name="nav_send">Share with your friends</string>
    <string name="homepicture">homepicture</string>


    <!--Balaton Region-->
    <string name="lake_balaton">Lake Balaton</string>
    <string name="major_towns">Lake Balaton</string>
    <string name="wine_region">Wine Region</string>

    <string name="home0">Lake Balaton Gentle slopes, proud dolomit cliffs, rich-flavoured wine smell owed by the sun, and beaches with silky water and spas still keeping the warmth of long extinct volcanoes, underground canalswhereyoucan go boating, caves in which ever the air has a healing power, moors rich in wildlife. All the senatural treasures and beauties featuring hills, spas, moors and Hungarian Sea as the brightest colour of the palette to the West Balaton Region. Lenght:79 km Breadth: 1.3-14 km Area: 594 km2 Average depth: 3.0-3.6m</string>
    <string name="home1">In summer the major towns (Balatonfüred, Keszthely, Siófok, Zamárdi, Balatonboglár) around the lake come alive with colourful programs including a buzzing nightlife. Should you get bored by lieing on the sun or soaking in the silky water you surely will find a concert, a cooking festival or a sport event that will jazz you up.</string>
    <string name="home2">Badacsony wine region is located in central Transdanubia, on the Northern shores of Lake Balaton, around mount Badacsony. Its area is approximately 1600 hectares.The climate is mild, tempered with relatively high air humidity. Due to the proximity of Lake Balaton the Southern slopes receive the sun light reflected from the lake is surface. The reflection of the sunshine makes that the micro-climate is ideal for grape cultivation. Szürkebarát is one of the best known varieties cultivated in the Badacsony wine region.</string>

    <!--Discover-->
    <string name="keszthely_town">Keszthely Town</string>
    <string name="heviz_town">Héviz Town</string>
    <string name="tihany_town">Tihany Town</string>
    <string name="siofok_town">Siófok Town</string>

    <string name="disc0">Keszthely located on the western shore of Lake Balaton. The largest city by the lake and one of the more important cultural, educational and economic hubs in the region. Due to its favorable location Keszthely and the surrounding area is a preferred holiday destination."</string>
    <string name="disc1">Héviz. The town is located near Lake Hévíz, the worlds second-largest thermal lake, but biologically the biggest active natural lake. Its temperature is affected by the combination of hot and cold spring waters, coming from 38 meters underground. The water breaks out from a spring cave, at approximately 410 liters per second, with a temperature of 40 °C (104 °F).</string>
    <string name="disc2">Tihany is a village on the northern shore of Lake Balaton on the Tihany Peninsula The whole peninsula is a historical district. Tihany is the most spectacular place of the lake Balaton. The peninsula is deeply elongating in to the Balaton, offering a very special view from every point. Tihanys fame is based on its natural and historical sights.</string>
    <string name="disc3">Siófok is a city in Hungary on the southern bank of Lake Balaton in Somogy County. The city is one of Hungarys most popular holiday destinations, famous for its beaches and nightlife. Siófok is one of the richest municipalities of Hungary due to tourism. Hungarians often call the town The capital of Balaton, as it is the largest city on its shores and acts as the commercial and touristic hub of the region.</string>

    <!--Must visit-->
    <string name="tihany_abbey">Tihany Abbey</string>
    <string name="tihany_echo">Tihany Echo</string>
    <string name="hermit_houses">Hermit Houses</string>
    <string name="festetics_palace">Festetics Palace</string>

    <string name="mustvisit0">You can approach the two-towered Benedictine Abbey, symbol of Tihany, on a steep winding road by walk or by bycicle.Beautiful frescos adorn the interior of the abbey built in the first half of the 18th century. The churchs organ is from 1764 but it was destroyed by a granade in 1945.The abbey hosts classical music concerts throughout the year.</string>
    <string name="mustvisit1">Echo used to be Tihany is most noted phenomena that every tourist to the pensinsula tried over and over again from the Visszhang (Echo) Hill. The walls of the Abbey rever berated words shouted from the top of the hill, however the phenomena is disapearing due to increased noise and other buildings built over the years.</string>
    <string name="mustvisit2">On the northern part of the Tihany peninsula you can see Central Europes only remained hermit colony created by Greek monks whom King Andrew I. invited to Hungary. You can see some of the cells and a cave-church carved out by th emonks. Some of the cave hosues are at 20 m high.</string>
    <string name="mustvisit3">The Festetics Palace is a Baroque palace located in the town of Keszthely, Zala, Hungary The palace has housed an independent museum (Helikon Palace Museum) since 1974; it is visited by 200,000 people each year.</string>

    <!--Entertanment-->
    <string name="lavender_fest">Lavender Festival</string>
    <string name="art_cinema">Art Cinema</string>
    <string name="balaton_sound">Balaton-Sound</string>

    <string name="entertainment0">The annual Lavender Festival in co-production of the Németh László Culture Centre and the Balaton-felvidéki National Park is a location-specific event focusing on lavender, which has always played an important role in the life of Tihany.</string>
    <string name="entertainment1">The Motion Picture Theatre has a projection room for 104 people, which was renovated in 2005. Recently new digital technology equipment has been installed ensuring up-to-date video and sound quality.</string>
    <string name="entertainment2">Balaton Sound is the center of summer parties and concerts organised by the Coca Cola beach.</string>

    <!--Sports-->
    <string name="fishing">Fishing on Balaton</string>
    <string name="wintersport">Winter Sports</string>
    <string name="windsurfing">Windsurfing, Sailing</string>
    <string name="cycling">Cycling Around Balaton</string>

    <string name="sport0">Balatons beautiful waters provide various fishing adventures for you almost all year round. Look for carps near the reeds in clear, flat water with rolling vine-lands in the background.</string>
    <string name="sport1">In winter when temperature falls well be low zero for many days the frozen lake attract ice skaters and a new winter sport craze, ice sailing is also becoming more and more popular.</string>
    <string name="sport2">Whether you want to learn windsurfing, go for sailing, or just admiring the picturesque scenery at sunset from a boat you can find an opportunity to do so at Lake Balaton.</string>
    <string name="sport3">You can explore the lake-side settlement son one of the best cycle paths in the country, with total length of approx. 200 km.</string>

    <!--Hotels-->
    <string name="hotel_azur">Hotel Azúr Prémium</string>
    <string name="hotel_fured">Hotel Füred Spa</string>
    <string name="hotel_club">Club Hotel Tihany</string>
    <string name="hotel_lotus">Lotus Therme Hotel</string>

    <string name="hotel0">8600 Siófok, Erkel Ferenc u. 2/c.</string>
    <string name="hotel1">8230 Balatonfüred, Széchenyi u. 20.</string>
    <string name="hotel2">8230 Tihany, Rév u. 3.</string>
    <string name="hotel3">8380 Hévíz, Lótuszvirág u. 1.</string>

    <!--Restaurants-->
    <string name="restaurant_vitorlás">Vitorlás Restaurant</string>
    <string name="restaurant_romai">Római Pince Restaurant</string>
    <string name="restaurant_kecske">Kecskeköröm Csárda</string>
    <string name="restaurant_roxy">Roxy Restaurant</string>

    <string name="restaurant0">8230 Balatonfüred, Tagore stny. 1.</string>
    <string name="restaurant1">8380 Hévíz, Dombföldi u. 1.</string>
    <string name="restaurant2">8237 Tihany, Mádl Ferenc tér 2.</string>
    <string name="restaurant3">8600 Siófok, Fő tér 8.</string>

</resources>
