<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_discover"
            android:title="@string/nav_discover" />
        <item
            android:id="@+id/nav_mustvisit"
            android:title="@string/nav_mustvisit" />
        <item
            android:id="@+id/nav_enertainment"
            android:title="@string/nav_entertainment" />
        <item
            android:id="@+id/nav_sports"
            android:title="@string/nav_sports" />
        <item
            android:id="@+id/nav_hotels"
            android:title="@string/nav_hotels" />
        <item
            android:id="@+id/nav_restaurants"
            android:title="@string/nav_restaurants" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>


</menu>
